Fix spacing on layout

--- a/components/Card/CardDetails.module.scss
+++ b/components/Card/CardDetails.module.scss
@@ -10,7 +10,7 @@
 }
 
 .leftRail {
-  width: 300px;
+  width: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,9 +18,13 @@
 }
 
 .image {
-  width: 150px;
+  width: 200px;
   height: auto;
   box-shadow: 0px 2px 5px #95a5a6;
+}
+
+.cardName {
+  font-size: 25px;
 }
 
 .tags {
@@ -35,7 +39,6 @@
 
 .rightSection {
   width: 100%;
-  padding-left: 30px;
-  padding-right: 30px;
-  box-sizing: border-box;
+  margin-left: 80px;
+  margin-right: 50px;
 }
